# graphiti

./: .dockerignore  .env.example  .env.ollama  .gitignore  .gitmodules  01-executive-summary.md  02-redis-persistence-overview.md  03-falkordb-persistence-guide.md  04-configuration-reference.md  05-implementation-guide.md  06-backup-recovery-procedures.md  07-monitoring-alerting.md  08-troubleshooting-guide.md  09-performance-benchmarking.md  10-production-deployment.md  8b_test.py  ARCHITECTURE_OVERVIEW.md  BACKUP_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  COSMOGRAPH_DEBUG_QUERIES.md  DEPLOYMENT_PROCESS.md  DEVELOPMENT_SETUP.md  DOCKER_DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.backup  Dockerfile.dev  Dockerfile.falkordb-custom  ENVIRONMENT.md  FRONTEND_ARCHITECTURE_ANALYSIS.md  GRAPH_VISUALIZATION_GUIDE.md  Graphiti_All_Prompts.md  HOVER_PERFORMANCE_ANALYSIS.md  IMPLEMENTATION_STATUS.md  LIVE_CORRUPTION_ANALYSIS.md  LLM_Output_Analysis.md  Makefile  Makefile.frontend  OLLAMA_INTEGRATION_GUIDE.md  OLLAMA_TEST_SUMMARY.md  PRODUCTION_BACKUP_PLAN.md  (+172 more)
.claude/: settings.json
cli/: benchmark.py
cosmograph-documentation/: README.md
docs/: DEDICATED_EMBEDDING_SETUP.md  DRY_RUN_BENCHMARKING_GUIDE.md  ENVIRONMENT_VARIABLES.md  GRAPHITI_CLAUDE_INTEGRATION.md  GraphColorsAndGlow.md  PRD-Matrix-Claude-Integration.md  bugfix-size-multiplier-not-working.md  centrality_update_plan.md  cerebras-integration.md  deduplication-guide.md  episodic-nodes-without-entities-analysis.md  graph-build-deduplication-and-merge.md  ingestion-queue-design.md  ingestion-queue-worker-triage.md  merge-implementation-proposed-changes.md  related-nodes-count.md  relevance-feedback-system.md  sizing-strategies-wiring.md  sync-investigation-duckdb-falkor.md  temporal-fields-consistency.md
examples/: docker_ollama_example.py  dry_run_benchmark.py  falkordb_ollama_example.py  ollama_hybrid_setup.py  ollama_local_setup.py  ollama_quickstart.py
frontend/: .dockerignore  .env.production  .npmrc  ARROW_DUCKDB_REFACTORING.md  BUILD.md  Dockerfile  Dockerfile.minimal  Dockerfile.simple  LAYOUT_IMPLEMENTATION_COMPLETE.md  LAYOUT_SYSTEM_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  README-DEPLOYMENT.md  README.md  TEST_RESULTS_SUMMARY.md  UI_FUNCTIONALITY_AUDIT.md  ZOOM_FIX_DOCUMENTATION.md  count_current_fields.js  count_fields.js  debug_schema.js  docker-compose.ghcr.yml  eslint.config.js  extract_schema.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  test-results.json  tsconfig.strict.json  vite.config.dev.ts  vite.config.ts  vite.config.ts.timestamp-1753489592379-04c4e99e9085b.mjs  vitest.config.refactored.ts  vitest.config.ts
graph-visualizer/: Dockerfile  app.py  cosmos api.md  cosmoslinks.md
graph-visualizer-rust/: API_ENDPOINTS.md  Cargo.toml  Dockerfile  IMPORT_VALIDATION.md  README.md  build.sh  cosmograph-cosmos-1.6.1.tgz  fix-imports.cjs  fix-imports.js  gl-bench-1.0.42.tgz  import-dependencies.json  random-5.4.1.tgz  validate-imports.cjs  validate-imports.js  validate-runtime.js
graph-visualizer-rust/.github/workflows/: validate.yml
graph-visualizer-rust/src/: arrow_converter.rs  cache.rs  delta_tracker.rs  duckdb_store.rs  main.rs  websocket.rs
graph-visualizer-rust/static/: build-cosmograph.js  cosmograph.html  cosmos-test.html  cosmos.html  debug-cosmograph.js  index.html  test_cosmograph.html
graphiti-analysis-complete/: EXECUTIVE-SUMMARY.md  README.md
graphiti-centrality-rs/: Cargo.toml  Dockerfile  README.md  test-verify.sh
graphiti-centrality-rs/falkor-test/: Cargo.toml
graphiti-centrality-rs/falkor-test/src/: main.rs
graphiti-centrality-rs/src/: algorithms.rs  client.rs  error.rs  feedback.rs  lib.rs  main.rs  models.rs  server.rs
graphiti-centrality-rs/tests/: integration.rs
graphiti-search-rs/: Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  benchmark.py  debug_falkor.py  docker-compose.yml  performance-tuning.md  test_falkor_response.py  test_redis_resp.rs  test_rust_service.py  test_rust_service_v2.py  test_with_real_data.py
graphiti-search-rs/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
graphiti-search-rs/src/embeddings/: mod.rs
graphiti-search-rs/src/falkor/: client.rs  client_v2.rs  mod.rs  parser.rs  parser_v2.rs  queries.rs
graphiti-search-rs/src/handlers/: community_search.rs  edge_search.rs  episode_search.rs  mod.rs  node_search.rs
graphiti-search-rs/src/search/: bfs.rs  cache.rs  fulltext.rs  mod.rs  reranking.rs  similarity.rs
graphiti-search-rs/tests/: test_falkordb_sdk.rs
graphiti_core/: client_factory.py  edges.py  graph_queries.py  graphiti.py  helpers.py  nodes.py
insights/: architectural-review.md  performance-audit-report.md  prd-component-architecture-modernization.md  prd-data-processing-optimization.md  prd-graph-canvas-performance.md  prd-master-index.md  prd-memory-management-optimization.md  (+3 more)
server/: PERFORMANCE_IMPROVEMENTS.md  check_neo4j.py  debug_env.py  install_websockets.sh  pyproject.toml  test_ollama.py  test_ollama_embeddings.py  test_type_safety.py  test_type_safety_simple.py  type_errors.txt
server/graph_service/: async_webhooks.py  cache.py  config.py  factories.py  main.py  queue_proxy.py  webhooks.py  websocket_manager.py  zep_graphiti.py
server/graph_service/dto/: __init__.py  common.py  nodes.py  retrieve.py
server/graph_service/routers/: cached_retrieve.py  centrality.py  ingest.py  ingest_queue.py  metrics.py  nodes.py  relevance.py  retrieve.py  search_proxy.py
server/tests/: test_centrality_api.py  test_webhook_integration.py
server/typings/graph_service/: factories.pyi
server/typings/graphiti_core/: __init__.pyi  edges.pyi  embedder.pyi  errors.pyi  graphiti.pyi  llm_client.pyi  nodes.pyi
server/typings/graphiti_core/driver/: __init__.pyi  base.pyi  falkordb_driver.pyi  neo4j_driver.pyi
server/typings/graphiti_core/search/: __init__.pyi  search_config_recipes.pyi  search_filters.pyi
server/typings/graphiti_core/utils/: __init__.pyi  datetime_utils.pyi
server/typings/graphiti_core/utils/maintenance/: __init__.pyi  graph_data_operations.pyi
(+627 files in other folders)
